fixed checkbox spacing

--- a/styles/form.css
+++ b/styles/form.css
@@ -44,20 +44,17 @@ main {
 /*----------- FORM STYLING --------------*/
 .wf1 {
   background: linear-gradient(#3EAF76, #FFFFFF);
+  padding: 1rem;
 }
 
 .wf1 label {
   display: block;
   /* changes from inline to block, putting each label on own line */
-  padding-top: 1rem;
-  /* separates out labels so they aren't touching (not margin) */
-  font-size: 0.9rem;
 }
 
 /* now to fix the "audience" and "software needed" text spacing for the radial and checkboxes */
 /* they are in div containers */
 .wf1 div {
-  padding-top: 1rem;
   /* using font size to match the labels above */
   font-size: 0.9rem;
 }
@@ -71,7 +68,7 @@ main {
   display: block;
   border: 1px solid #999;
   border-radius: 6px;
-  /* padding added to make them at least 44px tall for touch */
+  /* padding added to make input areas at least 44px tall for touch */
   padding: 0.75rem;
   color: #555;
   /* min width of 100% for phone screens, but limit to 400px for large screens */
@@ -102,7 +99,21 @@ main {
   box-shadow: 1px 1px 4px #999;
 }
 
-/*-------------radio buttons----------*/
+/*------------input text (not radio or checkbox)----------------*/
+.date-label,
+.select-label,
+.textarea-label,
+.text-label {
+  margin-top: 1rem;
+}
+
+
+/*---------------------radio buttons---------------------*/
+.stars-paragraph {
+  margin-top: 1rem;
+  /* margin-bottom: -2rem; */
+}
+
 .stars-container {
   display: flex;
   justify-content: space-around;
@@ -113,14 +124,35 @@ main {
   flex-direction: column;
 }
 
+/*---------------------checkboxes---------------------*/
+.checkbox-paragraph {
+  margin-top: 1rem;
+}
+
+/*the CSS below is not working*/
+/* .checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 0.25rem 0;
+  padding-top: 0.25rem;
+}
+
+.checkbox-label {
+  padding-top: 0.25rem;
+} */
+
+input[type="checkbox"] {
+  height: 20px;
+  width: 20px;
+}
 
 /*-----------Last Change-------------*/
 
 
 
 
-/* next we will change the appearance of required inputs using a pseudoclass */
-/* this will help the required areas stand out */
+/*-----------styling the required inputs--------------*/
 .wf1 input:required {
   border-bottom: solid 8px red;
 }
